--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 temp_dir/yankring_history_v2.txt
 temp_dir/undo_dir*
 autoload/airline
-bundle/colorscheme*
+bundle/*
 colors/*
 doc/tags
 .DS_Store
