Use MPLS instead of Jedi

--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,5 +1,5 @@
 {
-  "python.jediEnabled": true,
+  "python.jediEnabled": false,
   "python.linting.enabled": false,
   "python.analysis.diagnosticEnabled": false,
 }
